# chatty

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  author.yaml  config.yaml  pyproject.toml
.claude/: CLAUDE.md  conventions.md  rules.md
.claude/tasks/: dedicated-embedding.md  embedding-cache.md  slm-enable-thinking.md  slm-stream-adapter-possibility.md
.github/actions/deploy-helmfile/: action.yml
.github/actions/helm-deploy/: action.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_create_chat_messages.py  0002_create_text_embeddings.py  0003_resize_embedding_vectors_384.py
cli/: __init__.py  __main__.py  chatty_cli.py  client.py  config.py  formatter.py
configs/: config.yaml  persona.yaml  prompt.yaml  prompt.yml  system.yaml
deploy/docker/: docker-compose.dev.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: certificate.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  podmonitor.yaml  serviceaccount.yaml
deploy/helmfile/: README.md  helmfile.yaml.gotmpl
deploy/helmfile/chart/: values.yaml
deploy/helmfile/chart/templates/: NOTES.txt  certificate.yaml  deployment.yaml
deploy/helmfile/values/: default.yaml.gotmpl  prod.yaml.gotmpl
deploy/secret/: apply.sh  chatty.env.example
docs/: design.md  requirements.md
src/chatty/: __init__.py  app.py  config.py
src/chatty/api/: __init__.py  chat.py  deps.py  exceptions.py  health.py  models.py  streaming.py
src/chatty/configs/: __init__.py  config.py  persona.py  persona_actions.py  persona_processors.py  persona_sources.py  system.py  tools.py
src/chatty/core/: __init__.py  chat_service.py  llm.py  prompt.py
src/chatty/core/embedding/: __init__.py  client.py  cron.py  gated.py  repository.py
src/chatty/core/llm/: __init__.py  dependency.py  deps.py  gated.py  no_think.py  reasoning.py
src/chatty/core/service/: __init__.py  base.py  callback.py  dependency.py  deps.py  metrics.py  models.py  one_step.py  prompt.py  rag.py  stream.py  stream_processor.py
src/chatty/core/service/models/: __init__.py  constants.py  context.py  events.py  service.py
src/chatty/core/service/tools/: __init__.py  model.py  processors.py  registry.py  search_tool.py  struct_tool.py  url_tool.py
src/chatty/core/tools/: base.py  processors.py  registry.py  url_tool.py
src/chatty/infra/: __init__.py  db_engine.py  http_utils.py  id_utils.py  lifespan.py  logging.py  processor_utils.py  redis.py  singleton.py  telemetry.py  tokens.py
src/chatty/infra/concurrency/: __init__.py  base.py  gate.py  guards.py  inbox.py  local_backend.py  real_ip.py  redis_backend.py  semaphore.py
src/chatty/infra/db/: __init__.py  cache.py  callback.py  constants.py  converters.py  deps.py  embedding.py  engine.py  history.py  models.py  repository.py
tests/: test_anti_flood.py  test_config_simple.py  test_config_sources.py  test_events.py  test_processors.py  test_reasoning_openai.py  test_stream.py  test_tools.py
tests/core/service/: test_stream_processor.py
tests/e2e/: __init__.py  conftest.py  test_streaming_agent.py
tests/test_data/: site.html
