[project]
name = "chatty"
version = "0.1.0"
description = "Chatbot impersonates me (or you) professionally with context."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]

[tool.ruff]
line-length = 88
# extend-exclude = ["tests"]

[tool.coverage.run]
source = ["src/chatty"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.5",
]
